<resources>
    <string name="app_name">Componets</string>
    <string name="action_settings">Settings</string>
    <string name="edittext_first_name">First Name</string>
    <string name="edittext_middle_name">Middle Name</string>
    <string name="edittext_last_name">Last Name</string>
    <string name="editext_mobile">Mobile</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="please_accept_tersm_and_condition">Please accept Tersm And Condition.</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>
